<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QrCodeQuest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Einstellungen</string>
    <string name="title_activity_bestlist">BestlistActivity</string>
    <string name="title_activity_quest">QuestActivity</string>
    <string name="best">Bestenliste</string>
    <string name="btscan">Scannen</string>
    <string name="AppName">QR-Code-Quest</string>
    <string name="quests">Quests</string>
    <string name="bestenliste">Bestenliste</string>
    <string name="node">NODE</string>
    <string name="question">QUESTION</string>
    <string name="registrieren">Registrieren</string>
    <string name="vorname">Vorname:</string>
    <string name="nachname">Nachname:</string>
    <string name="spitzname">Spitzname:</string>
    <string name="nameInBestenliste">Namen in Bestenliste eintragen?</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="weiter">Weiter</string>
    <string name="willkommen">Willkommen</string>
    <string name="LadeFragen">Lade Fragen…</string>
    <string name="anmelden">Anmelden</string>
    <string name="title_activity_nfc">NFCActivity</string>
    <string name="nodes">Nodes</string>
    <string name="text">Text</string>
    <string name="text1">Text</string>
    <string name="location">Location:</string>
    <string name="beschreibung">Beschreibung:</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_identification">IdentificationActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_themes">ThemeActivity</string>
    <string name="chevron_right">Chevron Right</string>
    <string name="questname">questname</string>
    <string name="noText"></string>
    <string name="title">QrCodeQuest</string>
    <string name="scorevalue">Punktezahl:</string>

</resources>
