<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

    <TextView
            android:id="@+id/textViewNode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/node"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewNode"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/question"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    <ScrollView
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_below="@+id/textViewQuestion"
            android:layout_alignStart="@+id/textViewQuestion"
            android:layout_alignLeft="@+id/textViewQuestion"
            android:layout_marginTop="30dp"
            android:layout_marginStart="-2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_alignParentBottom="true"
            android:fadeScrollbars="false" android:id="@id/scrollViewQuestions">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:id="@id/linearLayoutQuestions">
        </LinearLayout>

    </ScrollView>

    <ProgressBar android:indeterminate="true"
                 android:layout_width="50dp" android:layout_height="50dp"
                 android:id="@+id/marker_progress" style="?android:attr/progressBarStyle"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true" android:visibility="visible"
            />
    <TextView
            android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/loadQuestionsText" android:text="@string/LadeFragen"
            android:layout_below="@+id/marker_progress" android:layout_centerHorizontal="true"/>

</RelativeLayout>